fix logback configuration

--- a/recipes/storm.properties
+++ b/recipes/storm.properties
@@ -36,12 +36,13 @@ whirr.instance-templates=1 storm-nimbus+storm-ui+storm-supervisor,1 zookeeper
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_whirr
 whirr.public-key-file=${whirr.private-key-file}.pub
 
-whirr.image-id=us-east-1/ami-a53264cc
+#whirr.image-id=us-east-1/ami-a53264cc
+whirr.image-id=us-east-1/ami-55dc0b3c
 
 whirr.hardware-id=t1.micro
 
 #whirr.client-cidrs=0.0.0.0/0
 
 #whirr.firewall-rules.zookeeper=2181
-whirr.firewall-rules.storm-nimbus=6627
+#whirr.firewall-rules.storm-nimbus=6627
 #whirr.firewall-rules.storm-ui=8080
