add ability to customize generated storm.yaml

--- a/recipes/storm.properties
+++ b/recipes/storm.properties
@@ -26,8 +26,8 @@
 whirr.cluster-name=storm
 
 # Change the number of machines in the cluster here
-#whirr.instance-templates=1 storm-nimbus+storm-ui,3 storm-supervisor, 1 zookeeper
-whirr.instance-templates=1 storm-nimbus+storm-ui+storm-supervisor,1 zookeeper
+whirr.instance-templates=1 storm-nimbus+storm-ui,3 storm-supervisor, 1 zookeeper
+#whirr.instance-templates=1 storm-nimbus+storm-ui+storm-supervisor+zookeeper
 
 # Setup your cloud credentials by copying conf/credentials.sample
 # to ~/.whirr/credentials and editing as needed
@@ -36,13 +36,41 @@ whirr.instance-templates=1 storm-nimbus+storm-ui+storm-supervisor,1 zookeeper
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_whirr
 whirr.public-key-file=${whirr.private-key-file}.pub
 
-#whirr.image-id=us-east-1/ami-a53264cc
 whirr.image-id=us-east-1/ami-55dc0b3c
 
 whirr.hardware-id=t1.micro
+
+#whirr.provider=stub
 
 #whirr.client-cidrs=0.0.0.0/0
 
 #whirr.firewall-rules.zookeeper=2181
 #whirr.firewall-rules.storm-nimbus=6627
 #whirr.firewall-rules.storm-ui=8080
+
+# REQUIRED: Where to download the storm distribution
+# Storm 0.9.0-rc3
+whirr.storm.zip.url=https://dl.dropboxusercontent.com/s/t8m516l2kadt7c6/storm-0.9.0-rc3.zip
+
+# Storm 0.9.0-rc2
+#whirr.storm.zip.url=https://dl.dropboxusercontent.com/s/p5wf0hsdab5n9kn/storm-0.9.0-rc2.zip
+
+
+
+
+#whirr-storm.supervisor.slots.ports=6700,6701,6702,6703
+
+# Netty transport configuration (REQUIRED -- 0mq is not currently supported)
+whirr-storm.storm.messaging.transport="backtype.storm.messaging.netty.Context"
+whirr-storm.storm.messaging.netty.server_worker_threads=1
+whirr-storm.storm.messaging.netty.client_worker_threads=1
+whirr-storm.storm.messaging.netty.buffer_size=5242880
+whirr-storm.storm.messaging.netty.max_retries=100
+whirr-storm.storm.messaging.netty.max_wait_ms=1000
+whirr-storm.storm.messaging.netty.min_wait_ms=100
+
+# Kryo registrations
+#whirr-storm.topology.kryo.register=org.mycompany.MyType,org.mycompany.MyType2: org.mycompany.MyType2Serializer
+
+# Metrics Consumers
+#whirr-storm.topology.metrics.consumer.register=class: "backtype.storm.metrics.LoggingMetricsConsumer"\n      parallelism.hint: 1,class: "org.mycompany.MyMetricsConsumer"\n      parallelism.hint: 1\n      argument:\n        - endpoint: "metrics-collector.mycompany.org"
