--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,14 @@
-<!--
-   Licensed to the Apache Software Foundation (ASF) under one or more
-   contributor license agreements.  See the NOTICE file distributed with
-   this work for additional information regarding copyright ownership.
-   The ASF licenses this file to You under the Apache License, Version 2.0
-   (the "License"); you may not use this file except in compliance with
-   the License.  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+
+<parent>
+	<groupId>org.sonatype.oss</groupId>
+	<artifactId>oss-parent</artifactId>
+	<version>7</version>
+</parent>
+
 
   <groupId>com.github.ptgoetz</groupId>
   <artifactId>whirr-storm</artifactId>
@@ -24,6 +16,29 @@
   <packaging>jar</packaging>
 
   <name>Apache Whirr : Storm Service</name>
+  
+  
+<licenses>
+    <license>
+        <name>The Apache Software License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        <distribution>repo</distribution>
+    </license>
+</licenses>
+<scm>
+	<connection>scm:git:git@github.com:ptgoetz/whirr-storm.git</connection>
+	<developerConnection>scm:git:git@github.com:ptgoetz/whirr-storm.git</developerConnection>
+	<url>:git@github.com:ptgoetz/whirr-storm.git</url>
+</scm>
+
+<developers>
+	<developer>
+		<id>ptgoetz</id>
+		<name>P. Taylor Goetz</name>
+		<email>ptgoetz@gmail.com</email>
+	</developer>
+</developers>
+  
   <dependencies>
     <dependency>
       <groupId>org.apache.whirr</groupId>
